<resources>
    <string name="app_name">Boki</string>
    <string name="title_home">Hem</string>
    <string name="title_profile">Mina Annonser</string>
    <string name="title_messages">Meddelanden</string>
    <string name="title_favorites">Favoriter</string>
    <string name="title_new_ad">Skapa annons</string>

    <string name="back">Tillbaka</string>
    <string name="settings">Inställningar</string>
    <string name="myBooks">Mina Böcker</string>

    <string name="myCollections">Mina Samlingar</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="singleBook">Lägg upp en enskild bok.</string>
    <string name="to_new_book_desc">Create new advert.</string>
    <string name="newCollection">Skapa en samling</string>

    <string name="hej">da</string>


    <string name="addAdvertTitle">*Titel</string>
    <string name="addAdvertPrice">*Pris</string>
    <string name="addAdvertAuthor">*Författare</string>
    <string name="addAdvertISBN">ISBN</string>
    <string name="addAdvertOtherInfo">Beskrivning:</string>

    <string name="titleHint">Ange titel</string>
    <string name="authorHint">Ange författare</string>
    <string name="priceHint">t ex 300kr</string>
    <string name="ISBNHint">t ex  9789147016976</string>
    <string name="createAdButton">Lägg upp annons</string>


    <string name="addAdvertHeader">Skapa ny annons</string>
    <string name="addAdvertHeaderEdit">Redigera din annons</string>
    <string name="addAdvertCondition">I vilket skick är din bok?</string>
    <string name="addAdvertSubjects">Välj ett eller flera ämnen:</string>
    <string name="addAdvertTags">Egna taggar (valfritt):</string>
    <string name="addAdvertTagHint">t ex Envariabelanalys</string>


    <string name="conditionGood">BRA</string>
    <string name="conditionNew">NY</string>
    <string name="conditionOk">OK</string>


    <string-array name="preDefSubjectTags">
        <item>Matematik</item>
        <item>Fysik</item>
        <item>IT/Data</item>
        <item>Elektronik</item>
        <item>Arkitektur</item>
        <item>Miljö</item>
        <item>Ekonomi</item>
        <item>Design</item>
        <item>Kemi</item>
        <item>Bioteknik</item>
        <item>Maskinteknik</item>
    </string-array>

    <!-- login and signup activity-->
    <string name="username"> Användarnamn </string>
    <string name="email">E-post</string>
    <string name="password">Lösenord</string>
    <string name="reenterPassword">Ange lösenord igen</string>
    <string name="login">Logga in</string>
    <string name="signup">Skapa användare</string>
    <string name="forgotPassword">Glömt lösenord?</string>
    <string name="logOut">Logga ut</string>
    <string name="loading">Laddar...</string>
    <string name="search">Search</string>

    <string name="keyForAdvert">advertID</string>

    <string name="putExtraToastKey">toast</string>
    <string name="noFavoritesFound">Du har inga favoriter sparade ännu. För att spara en favorit gå in på en annons och tryck på hjärtat.</string>
    <string name="noAdvertsInMarketFound">Det finns inga annonser som matchar din sökning. Testa en annan sökning.</string>
    <string name="noChatsFound">Du har inga aktiva chattar. För att kontakta en säljare öppna en annons och tryck på kontakta ägaren.</string>

    <string name="searchHint">Sök efter titlar...</string>
    <string name="sign_out">Logga ut</string>
    <string name="newPrice">ange nytt pris</string>
    <string name="hintNewTitle">ange ny titel</string>
    <string name="hintnewPrice">ange nytt pris</string>
    <string name="myMessages">Mina meddelanden</string>
    <string name="myBooksTitle">Mina böcker</string>

    <string name="yourFavorites">Dina favoriter</string>
    <string name="noUserAdvertsFound">Du har inte lagt upp några böcker på försäljning. Vill du göra det nu?</string>

    <string name="toastDeletedAd">Din annons är borttagen</string>
    <string name="toastUpdatedAd">Din annons är uppdaterad</string>
    <string name="toastCreatedAd">Din annons är upplagd</string>

    <string name="errorToastCreateAd">"Ingen tag med detta namn kan hittas, testa att uppdatera vyn."</string>


    <!--- filter activity -->
    <string name="filter">Filtrera</string>
    <string name="inputMaxPrice">Ange maxpris:</string>
    <string name="minPrice">0 kr</string>
    <string name="maxPrice">500+ kr</string>

    <!-- no sorting display string -->
    <string name="pickSorting">Välj sortering..</string>

   <string name="noAdFoundDetailsView">"Hittar ingen annons, var vänlig uppdatera vyn."</string>
    <string name="cantSendMessageToYourself">"Du kan inte skicka meddelanden till dig själv."</string>



    //Errors
    <string name="noAdvertFoundDetailsPresenter">"Hittar ingen annons med denna beskrivning."</string>
    <string name="removedChats">\" har tagit bort annonsen ni diskuterat, er konversation kommer att arkiveras.\"</string>
    <string name="noAdFoundWithData">\"Det finns ingen annons som matchar denna data.\"</string>
    <string name="startChat">\"Starta chatt\"</string>


</resources>
