<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_new_ad"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_new_ad" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messages_vector"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_profile" />


</menu>
